<resources>
    <string name="app_name">Asteroides</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de</string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_almacen_puntuaciones_preferencias">
        AlmacenPuntuacionesPreferencias
    </string>
</resources>
