<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/margen_botones"
    android:background="@drawable/degradado"
    tools:context="org.examples.asteroides.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/tituloAplicacion"
        android:padding="15dp"
        android:id="@+id/txtTitulo"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arrancar"
        android:id="@+id/btnjugar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar"
        android:id="@+id/btnconfig"/>

    <Button
        android:id="@+id/btnacerca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acercade" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Puntuaciones"
        android:id="@+id/btnsalir"/>

</LinearLayout>
